# tp_py_crontab_task

./: .pmfp_template.json  MANIFEST.in  README.md  setup.cfg
app/: app.py  app.py.jinja  task.py  tasks.py.jinja
