[metadata]
name = tp_py_crontab_task
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	    License :: OSI Approved :: MIT License
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
include = tp_py_crontab_task
exclude = tests

